pkg/front_end/testcases/nnbd/never_receiver.dart.weak.transformed.expect
library /*isNonNullableByDefault*/;
//
// Problems in library:
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:24:5: Error: The method 'foo' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named 'foo'.
//   y.foo(); // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:24:5: Warning: Method 'foo' is called on 'Never' which is potentially null.
// Try calling using ?. instead.
//   y.foo(); // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Error: The getter 'bar' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing getter, or defining a getter or field named 'bar'.
//   y.bar; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Warning: Property 'bar' is accessed on 'Never' which is potentially null.
// Try accessing using ?. instead.
//   y.bar; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Error: The setter 'baz' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing setter, or defining a setter or field named 'baz'.
//   y.baz = 42; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Warning: Property 'baz' is accessed on 'Never' which is potentially null.
// Try accessing using ?. instead.
//   y.baz = 42; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Error: The method 'call' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named 'call'.
//   y(); // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Warning: Method 'call' is called on 'Never' which is potentially null.
// Try calling using ?. instead.
//   y(); // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Warning: Expression of type 'Never' is used as a function, but it's potentially null.
// Try calling using ?.call instead.
//   y(); // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Error: The method '+' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named '+'.
//   y++; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Warning: Operator '+' is called on 'Never' which is potentially null.
//   y++; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Error: The method '+' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named '+'.
//   y += 1; // Error.
//     ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Warning: Operator '+' is called on 'Never' which is potentially null.
//   y += 1; // Error.
//     ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Error: The method '[]' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named '[]'.
//   y[42]; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Warning: Operator '[]' is called on 'Never' which is potentially null.
//   y[42]; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Error: The method '[]=' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named '[]='.
//   y[42] = 42; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Warning: Operator '[]=' is called on 'Never' which is potentially null.
//   y[42] = 42; // Error.
//    ^
//
import self as self;
import "dart:core" as core;

static method foo(Neverx, Never? y) → dynamic {
  core::String local0 = y.{core::Object::toString}();
  core::int local1 = y.{core::Object::hashCode};
  x.foo();
  x.bar;
  x.baz = 42;
  x.call();
  x.[](42);
  x.[]=(42, 42);
  x = x.+(1);
  x = x.+(1);
  let finalNever? #t1 = y in #t1.{core::Object::==}(null) ?{dynamic} null : #t1{Never}.foo();
  let finalNever? #t2 = y in #t2.{core::Object::==}(null) ?{core::Null?} null : #t2{Never}.bar;
  let finalNever? #t3 = y in #t3.{core::Object::==}(null) ?{core::int?} null : #t3{Never}.baz = 42;
  let finalNever? #t4 = y in #t4.{core::Object::==}(null) ?{dynamic} null : #t4{Never}.call();
  let finalNever? #t5 = y in #t5.{core::Object::==}(null) ?{core::Null?} null : #t5{Never}.[](42);
  let finalNever? #t6 = y in #t6.{core::Object::==}(null) ?{core::int?} null : #t6{Never}.[]=(42, 42);
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:24:5: Error: The method 'foo' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named 'foo'.
  y.foo(); // Error.
    ^^^";
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Error: The getter 'bar' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing getter, or defining a getter or field named 'bar'.
  y.bar; // Error.
    ^^^";
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Error: The setter 'baz' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing setter, or defining a setter or field named 'baz'.
  y.baz = 42; // Error.
    ^^^";
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Error: The method 'call' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named 'call'.
  y(); // Error.
   ^";
  y = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Error: The method '+' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named '+'.
  y++; // Error.
   ^" as{TypeError,ForDynamic,ForNonNullableByDefault} Never?;
  y = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Error: The method '+' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named '+'.
  y += 1; // Error.
    ^" as{TypeError,ForDynamic,ForNonNullableByDefault} Never?;
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Error: The method '[]' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named '[]'.
  y[42]; // Error.
   ^";
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Error: The method '[]=' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named '[]='.
  y[42] = 42; // Error.
   ^";
}
static method main() → dynamic {}
